[FIX] web_editor: horizontal scroll in grid mode
Adjust margin-inline for .row children of .o_grid_item to compensate for
default y-padding (10px) in full-width content mode. Resolves width
inconsistency where sub-rows exceed .o_grid_item container width in full
 width mode.

Steps to reproduce :
 - Enter edit mode
 - Drag & Drop a company team snippet
 - Check grid mode & content width : full
 - Save it
 => A horizontal scroll bar appears because the sub rows of the snippet
 are too wide (caused by their margin)

opw-3981579

--- a/addons/web_editor/static/src/scss/web_editor.frontend.scss
+++ b/addons/web_editor/static/src/scss/web_editor.frontend.scss
@@ -63,6 +63,10 @@
     column-gap: 0px !important;
 }
 
+.o_grid_item > .row {
+    margin-inline: 10px;
+}
+
 .o_grid_item_image {
     img, .media_iframe_video {
         width: 100% !important;
